[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatch-gettext"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "Damon Lynch", email = "damonlynch@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/damonlynch/hatch-gettext#readme"
Issues = "https://github.com/damonlynch/hatch-gettext/issues"
Source = "https://github.com/damonlynch/hatch-gettext"

[tool.hatch.version]
path = "src/hatch_gettext/__about__.py"
